--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -67,7 +67,7 @@
 
 .cart-results{
     border:1px solid grey;
-    background: teal;
+    background: #000;
     padding:10px;
     margin-top: 30px;
 }
