--- a/src/App.css
+++ b/src/App.css
@@ -265,7 +265,7 @@ nav .logoBtn a p span{
  }
 
  .new-links-navigation{
-   background: teal;
+   color: #bda139;
    position: relative;
    bottom: auto;
    top:auto;
